--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ button:hover {
 
     <div class="stat">
         <div id="totalStars" class="star-icons"></div>
-        <p>Total Stars</p>
+        <p>Stars</p>
     </div>
 </div>
 
@@ -277,10 +277,12 @@ function render() {
     const totalRead = categories.reduce((sum,cat) =>
         sum + cat.books.filter(b=>b.done).length,0);
 
-    const totalStars = categories.reduce((sum,cat)=>{
-        const readCount = cat.books.filter(b=>b.done).length;
-        return sum + Math.floor(readCount/10);
-    },0);
+    let totalStars = 0;
+    if (totalRead >= 10) totalStars = 1;
+    if (totalRead >= 30) totalStars = 2;
+    if (totalRead >= 60) totalStars = 3;
+    if (totalRead >= 100) totalStars = 4;
+    if (totalRead >= 150) totalStars = 5;
 
     document.getElementById("totalBooks").innerText = totalRead;
     document.getElementById("totalBadges").innerText = totalRead;
@@ -292,7 +294,6 @@ function render() {
     categories.forEach((cat,i)=>{
 
         const readCount = cat.books.filter(b=>b.done).length;
-        const stars = Math.floor(readCount/10);
 
         const card = document.createElement("div");
         card.className = "category-card";
@@ -309,7 +310,6 @@ function render() {
                     </h3>
                 </div>
                 <div>
-                    ${"⭐ ".repeat(stars)}
                     <button class="delete-btn"
                         onclick="event.stopPropagation(); removeCategory(${i})">
                         ✕
